# libtorch-pybind

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  requirements-dev.txt  setup.py  setuptorch.sh
src/: main.cpp
src/libtorch_pybind/: __init__.py
